# rustic_ml

./: .gitignore  Cargo.toml  LICENSE  README.md  RESOURCES.md  ROADMAP.md  THEORY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  other.md
.github/workflows/: bump_version.yml  lint.yml  publish.yml  publish_dry.yml  test.yml
benches/: matrix_benchmark.rs
datasets/: european_cities.csv  european_cities.txt
docs/: perceptron_theory.tex
examples/: DataframeLab.ipynb  SAT_GPA_simple_linear_regression.rs  dataframe_read_from_csv.rs  notebook_binary_classification.ipynb  notebook_read_dataframe.ipynb  perceptron_OR.rs  perceptron_movie_classification.rs
src/: activation.rs  cost.rs  dataframe.rs  lib.rs  matrix.rs  perceptron.rs
src/data_utils/: datacolumn.rs  dataframe.rs  matrix.rs  mod.rs
src/linear_regression/: linear_regression.rs  linear_regression_trait.rs  mod.rs  simple_linear_regression.rs
src/nn/: activation.rs  mod.rs
src/nn/networks/: feedforward.rs  mod.rs
src/utils/: matrix.rs
tests/: test_activation.rs  test_datacolumn.rs  test_dataframe.rs  test_matrix.rs
