[package]
name = "rustic_ml"
version = "0.0.2"
authors = ["Kjetil Indrehus <kjetilindrehus@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A machine learning library created from scratch with Rust."
repository = "https://github.com/KjetilIN/rustic_ml"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
