[package]
name = "rustic_ml"
version = "0.0.2"
authors = ["Kjetil Indrehus <kjetilindrehus@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A machine learning library created from scratch with Rust."
repository = "https://github.com/KjetilIN/rustic_ml"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5" 


[features]
extensive_benchmark = [] # Enable this to run extensive benchmarks 

# Development dependencies 
[dev-dependencies]
criterion = {version="0.4", features=["html_reports"]}

[[bench]]
name = "matrix_benchmark"
harness = false 
